fix: 403 checkout — MultiTenantFilter + auto-création cabinet à l'inscription
MultiTenantFilter : bypass le check firm pour /subscription/** et /payment/**
Un utilisateur nouvellement inscrit sans cabinet peut maintenant accéder au
checkout Stripe pour souscrire.

AuthService.register() : si firmName absent, auto-crée un cabinet "Cabinet [nom]"
pour garantir que tout utilisateur inscrit dispose toujours d'un cabinet,
évitant le 403 post-paiement sur /dashboard et toutes les routes protégées.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>